--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node ./dist/main.js",
     "dev": "cross-env NODE_ENV=staging nest start --watch",
     "start:dev": "cross-env NODE_ENV=staging && nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy": "gcloud app deploy",
+    "prebuild": "rimraf dist",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
