feat(ask): all answers

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DB_PORT=5432
 DB_DATABASE=seminar
 APP_HOST_SERVER=localhost
 APP_URL_PREFIX=v1
+DIALOGFLOW_PROJECT_ID=pro-equinox-374617
+GOOGLE_APPLICATION_CREDENTIALS=./pro-equinox-374617-e61ba83038dc.json
