--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gcp-build": "npm run build"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^5.4.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
