--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_USERNAME=develop
-DB_PASSWORD=develop
-DB_HOST=localhost
-DB_PORT=5432
-DB_DATABASE=seminar
-APP_HOST_SERVER=localhost
-APP_URL_PREFIX=v1
-DIALOGFLOW_PROJECT_ID=pro-equinox-374617
-GOOGLE_APPLICATION_CREDENTIALS=./pro-equinox-374617-e61ba83038dc.json
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+APP_HOST_SERVER=
+APP_URL_PREFIX=
+DIALOGFLOW_PROJECT_ID=
+GOOGLE_APPLICATION_CREDENTIALS=
